fix: desing z-index fix for tabs

--- a/packages/components/src/tabs/style.scss
+++ b/packages/components/src/tabs/style.scss
@@ -14,6 +14,7 @@
 	border-top: solid 1px var(--publisher-tab-panel-context-color);
 	flex: 1;
 	position: relative;
+	z-index: 1;
 
 	&:last-child {
 		border-right: none;
